  - State sensor is more tolerant to device input trimming non-printable 
    characters -- CF, RF, zero bytes, etc.  (Juha Lindfors, ORCJAVA-324) 
  - Use locale independent string case conversions in the controller, KNX and telnet
    protocols (Juha Lindfors, ORCJAVA-332, ORCJAVA-334, ORCJAVA-335)
  - Fix a bug in telnet switch sensor handling where untrimmed return value was
    never correctly parsed to 'on' state (Juha Lindfors, ORCJAVA-326)
  - Fix a false warning in ISY-99 protocol implementation (ORCJAVA-308)
  - 1-wire: Fix NPE when owserver is not reachable (Marcus Redeker, ORCJAVA-267)
  - KNX SCENE and LEARN_SCENE commands were mixed up. Enable scene number
    to be used with level sensors (Marcus Redeker, ORCJAVA-282)
  - Russound: reliability updates (Torbjorn Osterdahl, ORCJAVA-376)


Internal:

  - Enforce UTF-8 encoding on Java source files with javac to prevent build issues
    on systems with differing default character encoding configurations
    (Juha Lindfors, ORCJAVA-329)
  - Add Port Abstraction Daemon (PAD) source files to project (Olivier Gandit,
    Eric Bariaux, ORCJAVA-314, ORCJAVA-375)


Controller 2.0.2 (2013-02-26)
============================

 - Update Web Console implementation to 2.1.0 (Richard Turner, ORCJAVA-312)
 - Bug fix: sensor status cache was throwing a runtime exception
   which was not handled if a panel requested a sensor status on
   a sensor which failed to start (due to configuration or
   other errors). The unhandled exception caused the client
   call to fail instead of gracefully falling back to default or
   error value. (Eric Bariaux, ORCJAVA-268)
 - Bug fix: logging generated errors (null pointer exception) at
   shutdown (Eric Bariaux, ORCJAVA-222)
 

Controller 2.0.1 (2012-11-21)
=============================

 - Update Web Console implementation to 2.0.0 FINAL
 - Change Tomcat runtime default logging to file size
   bound (10MB per file) instead of unlimited file
   size logging

